<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/image_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_dialog_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dialog_owner"
        android:layout_toRightOf="@+id/image_dialog"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/text_dialog_owner_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text_dialog_owner"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/text_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_owner"
        android:layout_toRightOf="@+id/image_dialog"
        android:text="@string/text_dialog_title"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/text_dialog_title_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_owner_data"
        android:layout_toRightOf="@+id/text_dialog_title"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/text_dialog_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_title"
        android:layout_toRightOf="@+id/image_dialog"
        android:text="@string/text_dialog_body"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/text_dialog_body_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_title_data"
        android:layout_toRightOf="@+id/text_dialog_title"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:lines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/text_dialog_unread_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_body"
        android:layout_toRightOf="@+id/image_dialog"
        android:text="@string/text_dialog_unread_message"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/text_dialog_unread_message_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_body_data"
        android:layout_toRightOf="@+id/text_dialog_unread_message"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"/>
</RelativeLayout>